--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <link rel="stylesheet" type="text/css" href="index-style.css">
     </head>
     <body>
+        <script>
+            let name = prompt("What is your name?", "type here");
+            let age = null;
+            if(name != null){
+                age = prompt(`Hi, ${name}. What is your age?`, 0);
+            }
+            if(age != null && age > 0){
+                var person = {name: name, age: age};
+            }
+            alert(`So, your name is ${person.name} and you are ${person.age} years old. Nice to meet you, ${person.name}!`);
+        </script>
         <header>
             <h1>Cursos de Programação</h1>
         </header>
