--- a/index.html
+++ b/index.html
@@ -1,55 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>Cursos | Cursive-Bit</title>
-        <link rel="stylesheet" type="text/css" href="index-style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header>
-            <h1>Cursos de Programação</h1>
-        </header>
-        <section>
-            <h2 class="langName">Linguagem C</h2>
-            <article>
-                <h3>*Fundamentos da Linguagem C*</h3>
-                <p><b>Descrição: </b>No final deste curso o aluno sai dotado dos conhecimentos essenciais da linguagem C.</p>
-            </article>
-            <br>
-            <article>
-                <h3>*Estruturas de Dados do C*</h3>
-                <p><b>Descrição: </b>Neste curso, estudam-se as diversas formas de agrupar dados em coleções.</p>
-            </article>
-        </section>
-        <br>
-        <video width="500" height="350" poster="img/luanda.jpg" controls>
-            <source src="video/luanda-history.mp4" type="video/mp4">
-            O browser não suporta este formato de vídeo!
-        </video>
-        <br>
-        <audio controls>
-            <source src="audio/Billie_Eilish_-_Everything_I_Wanted.mp3" type="audio/mp3">
-            O browser não suporta este formato de audio!
-        </audio>
-        <br>
-        <section>
-            <h2 class="langName">Linguagem Java</h2>
-            <article>
-                <h3>*Fundamentos da linguagem Java*</h3>
-                <p><b>Descrição: </b>No final deste curso o aluno sai dotado dos conhecimentos essenciais da linguagem C.</p>
-            </article>
-            <br>
-            <article>
-                <h3>*Estrturas de dados do Java*</h3>
-                <p><b>Descrição: </b>Neste curso, estudam-se as diversas formas de agrupar dados em coleções.</p>
-            </article>
-        </section>
-        <br>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <!--Barra de navegação-->
+            <a class="navbar-brand" href="#page-top">WebConference</a>
 
-        <p>Efetue <a href="login.html">login</a>.</p>
+            <button class="navbar-toggler navbar-toggler-right" type="button"
+            data-toggle="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <!--Itens de navegação-->
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#speakers">speakers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sponsors">sponsors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contacts">contatos</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <header class="masthead">
+        <!--Imagem principal e botão de inscrição na conferência-->
+            <div class="container">
+                <div class="intro-text">
+                    <!--Título-->
+                    <div class="intro-lead-in">Vamos celebrar a Web!</div>
+                    <div class="intro-heading text-uppercase">WebConference</div>
+                    <!--Butão de inscrição-->
+                    <a class="btn btn-primary btn-xl text-uppercase" href="#" id="btnRegister">inscrever</a>
+                </div>
+            </div>
+        </header>
+        <section id="about">
+            <!--Informação básica sobre a conferência-->
+        </section>
+        <section id="speakers">
+            <!--Informação sobre os oradores da conferência-->
+        </section>
+        <section id="sponsors">
+            <!--Informação sobre os sponsors da conferência-->
+        </section>
+        <section id="contacts">
+            <!--Formulário para contatos e mapa-->
+        </section>
         <footer>
-            <p id="footer">Joaquim Cláudio - All rights reserved.</p>
+            <!--Links para as redes sociais e copyright-->
         </footer>
-        <script src="script.js"></script>
+        
+
+        <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="js/webconf.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.26.9/sweetalert2.all.min.js"></script>
     </body>
 </html>
