--- a/admin/html/participants.html
+++ b/admin/html/participants.html
@@ -1,15 +1,43 @@
-<div class="container-fluid">
-    <div class="jumbotron">
-        <h1 class="display-3">Participantes</h1>
-        <p class="lead">Gestão de inscritos na WebConference</p>
-        <hr class="my-2">
-        <div class="divParticipants" class="container">
-            <!--Tabela de inscritos-->
-            <div class="table-responsive">
-                <table id="tblParticipants" class="table table-sm">
-                    <!--Dados da tabela gerados via JavaScript-->
-                </table>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+        <div class="container-fluid">
+            <div class="jumbotron">
+                <h1 class="display-3">Participantes</h1>
+                <p class="lead">Gestão de inscritos na WebConference</p>
+                <hr class="my-2">
+                <div class="divParticipants" class="container">
+                    <!--Tabela de inscritos-->
+                    <div class="table-responsive">
+                        <table id="tblParticipants" class="table table-sm">
+                            <!--Dados da tabela gerados via JavaScript-->
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+<!--########################################################################################################################################################-->
+
+        <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.26.9/sweetalert2.all.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+        <script src="../js/participants.js"></script>
+    </body>
+</html>
+
+
+
+
